--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -165,6 +165,7 @@ See [Recent Additions and Updates](recent.html).
 * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
+    * [Vendoring packages](package-vendoring.html)
     * [Release blobs](release-blobs.html)
 * How do releases, jobs, and packages interact?
 * Managing release repository
