--- a/recent.html.md.erb
+++ b/recent.html.md.erb
@@ -2,6 +2,7 @@
 title: Recent Additions and Updates
 ---
 
+* [Package vendoring](package-vendoring.html)
 * [Native DNS Support](dns.html) [alpha]
 
 ---
