--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -152,6 +152,7 @@ See [Recent Additions and Updates](recent.html).
     * [Compiled releases](compiled-releases.html)
 * [What is a job?](jobs.html)
     * Creating a job
+    * [Errands](errands.html)
     * [Job lifecycle](job-lifecycle.html)
         * [Pre-start script](pre-start.html)
         * [Post-start script](post-start.html)
