Fix attach-disk "note"

--- a/persistent-disks.html.md.erb
+++ b/persistent-disks.html.md.erb
@@ -127,7 +127,7 @@ For example, to re-attach the disk:
 
 `bosh attach-disk redis/a4ecc903-e342-4a40-8a59-4c9e4aeba28d 1c13b266-6e14-4124-51f6-24ec3bc05344`
 
-<p class="note">Note: Attach disk command can also attach available disks found in the IaaS. They don't have to be listed in the orphaned disks list.</p>
+<p class="note">Note: `attach-disk` command can also attach available disks found in the IaaS. They don't have to be listed in the orphaned disks list.</p>
 
 Orphaned disks are deleted after [5 days by default](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.disks).
 
