Code format health monitor glob path

--- a/hm-config.html.md.erb
+++ b/hm-config.html.md.erb
@@ -46,7 +46,7 @@ properties:
 
 Enabled by default.
 
-Plugin that sends alerts and heartbeats as json to programs installed on the director over stdin. The plugin will start and manage a process for each executable matching the glob /var/vcap/jobs/*/bin/bosh-monitor/*.
+Plugin that sends alerts and heartbeats as json to programs installed on the director over stdin. The plugin will start and manage a process for each executable matching the glob `/var/vcap/jobs/*/bin/bosh-monitor/*`.
 
 ---
 ## <a name="tsdb"></a> OpenTSDB
