First parameter for operator 'p' can be an array

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -92,6 +92,7 @@ Templates have access to merged job property values, built by merging default pr
 - `<%%= p("some.property") %>`: Insert the property `some.property` value, else a default value from the job spec file. If `some.property` does not have a default in the spec file, error will be raised to the user specifying that property value is missing.
 Advanced usage:
     - Operator `p` can take optional parameter as a default value, e.g. `<%%= p("some.property", some_value) %>`. This value is used as a last resort.
+    - The first parameter can be an array, e.g. `<%%= p(["some.property1", "some.property2"], some_value) %>`. Value of the first property which is set will be returned.
 - `<%% if_p("some.property") do |prop| %>...<%% end %>` - Evaluates the block only if `some.property` property has been provided. The property value is available in the variable `prop`. Multiple properties can be specified: `<%% if_p("prop1", "prop2") do |prop1, prop2| %>`.
 
 <a id="properties-spec"></a>
