note common patterns for some property groups and link types

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -153,6 +153,8 @@ See [Recent Additions and Updates](recent.html).
 * [What is a job?](jobs.html)
     * Creating a job
     * [Errands](errands.html)
+    * [Properties: Suggested configurations](props-common.html)
+    * [Links: Common types](links-common-types.html)
     * [Job lifecycle](job-lifecycle.html)
         * [Pre-start script](pre-start.html)
         * [Post-start script](post-start.html)
