--- a/manifest-v2.html.md.erb
+++ b/manifest-v2.html.md.erb
@@ -39,7 +39,7 @@ name: my-redis
 
 **features** [Hash, options]: Specifies Director features that should be used within this deployment.
 
-* **use\_dns\_addresses** [Boolean, optional]: Enables or disables returning of DNS addresses in links. Defaults to global Director `use\_dns\_addresses` configuration.
+* **use\_dns\_addresses** [Boolean, optional]: Enables or disables returning of DNS addresses in links. Defaults to global Director `use_dns_addresses` configuration.
 
 Example:
 
