--- a/cck.html.md.erb
+++ b/cck.html.md.erb
@@ -4,13 +4,13 @@ title: Manual repair with Cloud Check
 
 <p class="note">Note: Updated for bosh-release v183 (1.3010.0).</p>
 
-BOSH provides the Cloud Check CLI command (a.k.a cck) to repair IaaS resources used by a specific deployment. It is not commonly used while normal operations; however, it becomes essential when some IaaS operations failed and the Director cannot resolve problems without a human decision or when the Resurrector is not enabled.
+BOSH provides the Cloud Check CLI command (a.k.a cck) to repair IaaS resources used by a specific deployment. It is not commonly used during normal operations; however, it becomes essential when some IaaS operations fail and the Director cannot resolve problems without a human decision or when the Resurrector is not enabled.
 
-As mentioned earlier the Resurrector will only try to recover a VM if it is missing from the IaaS or the if the Agent on the VM is not responding to commands. cck tool is similar to the Resurrector in that it also looks for those two conditions; however, instead of automatically trying to resolve these problems, it provides several options to the operator.
+The Resurrector will only try to recover any VMs that are missing from the IaaS or that have non-responsive agents. The cck tool is similar to the Resurrector in that it also looks for those two conditions; however, instead of automatically trying to resolve these problems, it provides several options to the operator.
 
 In addition to looking for those two types of problems, cck also checks correct attachment and presence of persistent disks for each deployment job instance.
 
-Once the deployment is set via `bosh deployment` command you can simply run `bosh cck`. Here is an example output when no problems are detected:
+Once the deployment is set via the `bosh deployment` command you can simply run `bosh cck`. Here is an example output when no problems are detected:
 
 <pre class="terminal wide">
 $ bosh cck
