Add guide to deploy BOSH in multiple regions on AWS using Multi-CPI
It describes how to connect the VPCs using:
- VPC Peering (VPCs in the same region)
- OpenVPN release (VPCs in different regions)

[#151112123](https://www.pivotaltracker.com/story/show/151112123)

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -176,6 +176,12 @@ See [Recent Additions and Updates](recent.html).
         * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
+## <a id="guides"></a> Guides
+
+* Multi-CPI
+  * [On AWS](multi-cpi-aws.html)
+
+---
 ## <a id="extend"></a> Extend BOSH
 
 * [Director API v1](director-api-v1.html)
