--- a/cpi-config.html.md.erb
+++ b/cpi-config.html.md.erb
@@ -77,6 +77,8 @@ azs:
 * **type** [String, required]: CPI type. Director will add `_cpi` suffix to the end of the type when calling CPI binary. Example: `openstack`, `google`.
 * **properties** [Hash, required]: Set of properties to provide to the CPI for each call so that CPI can authenticate and provision resources in an IaaS.
 
+<p class="note">Note: Properties will vary depending on the CPI you're trying to use. These are the `Global Configuration` of a given CPI. See <a href="cpi-config.html#cpi-config">a complete list of the CPI properties</a>.</p>
+
 OpenStack example:
 
 ```yaml
